dark mode fix

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -242,6 +242,12 @@ pre {
     border-left: 8px solid #505050;
   }
 
+  .aside {
+    background-color: #353535;
+    border: 1px solid #454545;
+    color: $text-color-dark;
+}
+
   img { opacity: 0.9; }
 
 }
